Fix decimals being cut off

--- a/imports/ui/markdeep/editor/navigation/navigation.scss
+++ b/imports/ui/markdeep/editor/navigation/navigation.scss
@@ -38,7 +38,7 @@
       color: white;
     }
     input {
-      width: 40px;
+      width: 45px;
       text-align: right;
       padding-right: 5px;
     }
